--- a/src/css/05_Home.css
+++ b/src/css/05_Home.css
@@ -145,6 +145,7 @@ ul.wp-list li.wp-list-item {
 ul.wp-list li.wp-list-item .wp-list-item-li-img {
   width: 100%;
   height: 160px;
+  background-image: url(../images/cars/125879.jpg);
   background-size: cover;
 }
 
@@ -159,4 +160,85 @@ ul.wp-list li.wp-list-item .pic-created-time {
   width: 100%;
   height: 24px;
   text-align: center;
+}
+
+/* wallpapers-category-detail */
+
+.wallpapers-category-detail-container {
+  padding: 50px 40px 0;
+  width: 100%;
+  height: 300px;
+}
+
+.wallpapers-category-detail-container .category-detail-gallery {
+  position: relative;
+  width: 1130px;
+  height: 150px;
+  padding: 0 80px;
+  margin: 0 auto;
+  background-color: #19191B;
+  overflow: hidden;
+}
+
+.category-detail-gallery div.gallery-leftArrow-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 80px;
+  height: 150px;
+  background-color: #19191B;
+}
+
+span.arrowLeft {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  color: #19191B;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.category-detail-gallery div.gallery-rightArrow-container {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 80px;
+  height: 150px;
+  background-color: #19191B;
+}
+
+span.arrowRight {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  color: #19191B;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.category-detail-gallery ul.ul-gallery {
+  width: 200%;
+  height: 114px;
+}
+
+ul.ul-gallery li.ul-gallery-item {
+  float: left;
+  width: 114px;
+  height: 84px;
+  margin: 33px 18px 33px 0;
+}
+
+.wallpapers-category-detail-container .category-detail-picture-container {
+  width: 1250px;
+  margin: 50px auto 70px;
 }
